--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "functions": {
-        "api/*.py": {
-            "maxDuration": 30
+        "api/convert.py": {
+            "maxDuration": 60
         }
     }
 }
